# backend/src/modules/gameScene/domain/aggregates/game-scene.types.ts
@@ -1,0 +1,10 @@
+export enum GridType {
+  SQUARE = 'square',
+}
+
+export enum GridMetricSystem {
+  FEET = 'Feet',
+  METERS = 'Meters',
+  MILES = 'Miles',
+  SQUARES = 'Squares',
+}
