# backend/src/modules/gameScene/infrastructure/persistence/typeorm/entities/game-scene.entity.ts
@@ -1,0 +1,50 @@
+import { Entity, PrimaryColumn, Column, OneToMany, CreateDateColumn, UpdateDateColumn } from 'typeorm';
+import { GameSceneLayerEntity } from './game-scene-layer.entity';
+import { GridMetricSystem, GridType } from '../../../../domain/aggregates/game-scene.types';
+
+@Entity('game_scenes')
+export class GameSceneEntity {
+  @PrimaryColumn('uuid')
+  id: string;
+
+  @Column()
+  name: string;
+
+  @Column('jsonb')
+  stageJSON: any;
+
+  @Column('int')
+  stageWidth: number;
+
+  @Column('int')
+  stageHeight: number;
+
+  @Column()
+  backgroundColor: string;
+
+  @Column({
+    type: 'enum',
+    enum: GridType,
+    default: GridType.SQUARE,
+  })
+  gridType: GridType;
+
+  @Column('int', { default: 70 })
+  gridCellSize: number;
+
+  @Column({
+    type: 'enum',
+    enum: GridMetricSystem,
+    default: GridMetricSystem.SQUARES,
+  })
+  gridMetricSystem: GridMetricSystem;
+
+  @OneToMany(() => GameSceneLayerEntity, (layer) => layer.scene, { cascade: true, eager: true })
+  layers: GameSceneLayerEntity[];
+
+  @CreateDateColumn()
+  createdAt: Date;
+
+  @UpdateDateColumn()
+  updatedAt: Date;
+}
